--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,20 @@
-alembic==1.4.2
-certifi==2020.6.20
-chardet==3.0.4
+appdirs==1.4.4
+astroid==2.3.3
 click==7.1.2
+colorama==0.4.3
+distlib==0.3.0
+filelock==3.0.12
 Flask==1.1.2
-flask-marshmallow==0.11.0
-Flask-Migrate==2.4.0
-Flask-SQLAlchemy==2.4.3
-idna==2.9
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
-Mako==1.1.3
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
-marshmallow==3.5.0
-marshmallow-sqlalchemy==0.19.0
-psycopg2==2.8.4
-python-dateutil==2.8.1
-python-editor==1.0.4
-requests==2.24.0
-six==1.15.0
-SQLAlchemy==1.3.17
-urllib3==1.25.9
+mccabe==0.6.1
+numpy==1.18.1
+opencv-python==4.2.0.32
+pylint==2.4.4
+six==1.14.0
+virtualenv==20.0.21
 Werkzeug==1.0.1
+wrapt==1.11.2
