--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,40 @@
+alembic==1.4.2
 appdirs==1.4.4
 astroid==2.3.3
+certifi==2020.6.20
+chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
 distlib==0.3.0
 filelock==3.0.12
 Flask==1.1.2
+Flask-Cors==3.0.8
+flask-marshmallow==0.11.0
+Flask-Migrate==2.4.0
+Flask-QRcode==3.0.0
+Flask-SQLAlchemy==2.4.3
+idna==2.9
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
 lazy-object-proxy==1.4.3
+Mako==1.1.3
 MarkupSafe==1.1.1
+marshmallow==3.5.0
+marshmallow-sqlalchemy==0.19.0
 mccabe==0.6.1
 numpy==1.18.1
 opencv-python==4.2.0.32
+Pillow==7.1.2
+psycopg2==2.8.4
 pylint==2.4.4
+python-dateutil==2.8.1
+python-editor==1.0.4
+qrcode==6.1
+requests==2.24.0
 six==1.14.0
+SQLAlchemy==1.3.17
+urllib3==1.25.9
 virtualenv==20.0.21
 Werkzeug==1.0.1
 wrapt==1.11.2
